# cookiecutter-fastapi

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.pkg_name}}/: asgi.py  bootstrap.py  config.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.pkg_name}}/adapters/interface/: repository.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.pkg_name}}/adapters/sqlalchemy/: orm.py  repository.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.pkg_name}}/adapters/sqlmodel/: orm.py  repository.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.pkg_name}}/domain/: model.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.pkg_name}}/entrypoints/: deps.py  main.py  state.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.pkg_name}}/entrypoints/router/: dummy.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.pkg_name}}/service_layer/: service.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.pkg_name}}/service_layer/interface/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.pkg_name}}/service_layer/sqlalchemy/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.pkg_name}}/service_layer/sqlmodel/: __init__.py
